# VINS-Mono

OpenChisel/chisel_ros/: catkin.cmake
OpenChisel/chisel_ros/include/chisel_ros/: ChiselServer.h
OpenChisel/chisel_ros/launch/: mynt.launch
OpenChisel/chisel_ros/src/: ChiselServer.cpp
ar_demo/: CMakeLists.txt
camera_model/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/mynteye/: mynteye_config.yaml
dense_stereo_matcher/: CMakeLists.txt  package.xml
dense_stereo_matcher/config/: euroc.yaml  mynt.yaml
dense_stereo_matcher/launch/: euroc.launch  euroc_gdb.launch  mynt.launch  mynt_gdb.launch
dense_stereo_matcher/src/: dense_stereo_matcher_node.cpp  sgm.cpp  sgm.cu  sgm.h  sgm_impl.h  stereo_matcher.cpp  stereo_matcher.h
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: keyframe.cpp  pose_graph.cpp
stereo_mapper/: CMakeLists.txt
stereo_mapper/calib/euroc/: left.yml  right.yml
stereo_mapper/calib/mynt/: left.yml
stereo_mapper/config/: euroc.yaml  mynt.yaml
stereo_mapper/launch/: euroc.launch  mynt.launch
stereo_mapper/src/: calc_cost.cu  gpu_test.cpp  parameters.h  sgm.cpp  sgm.cu  sgm.h  sgm_impl.h  stereo_mapper.cpp  stereo_mapper.h  stereo_mapper_node.cpp  test.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator.cpp  estimator_node.cpp  feature_manager.cpp
vins_estimator/src/factor/: integration_base.h
vins_estimator/src/initial/: initial_sfm.cpp
vins_estimator/src/utility/: visualization.cpp
